grid set up w column 1/-1

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Odd Duck</title>
@@ -13,20 +18,20 @@
 
     </header>
     <main>
-        <section class="grid container">
-            <div class="grid item" id="grid-element-one">
+        <section class="grid-container">
+            <div class="grid-item" id="grid-element-one">one
             </div>
-            <div class="grid item" id="grid-element-two">
+            <div class="grid-item" id="grid-element-two">two
             </div>
-            <div class="grid item" id="grid-element-three">
+            <div class="grid-item" id="grid-element-three">three
             </div>
-            <div class="grid item" id="grid-element-four">
+            <div class="grid-item" id="grid-element-four">four
             </div>
-            <div class="grid item" id="grid-element-five">
+            <div class="grid-item" id="grid-element-five">five
             </div>
-            <div class="grid item" id="grid-element-six">
+            <div class="grid-item" id="grid-element-six">six
             </div>
-            <div class="grid item" id="grid-element-seven">
+            <div class="grid-item" id="grid-element-seven">seven
             </div>
 
 
