showing only one image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Odd Duck</title>
+    <title>Odd Duck Product Survey</title>
 </head>
 <body>
     <header>
@@ -19,19 +19,40 @@
     </header>
     <main>
         <section class="grid-container">
-            <div class="grid-item" id="grid-element-one">one
+            <div class="grid-item" id="grid-element-one">Odd Duck Products Survey: <br>
+             <p style= font-size:10;  >Please pick which product you would like to see us produce!</p>
             </div>
-            <div class="grid-item" id="grid-element-two">two
+
+            <div class="grid-item" id="grid-element-two">
+                <section class="results">
+                    <div class="list-container">
+                      <button id="results-button">Results</button>
+                      <ul id="results-list"></ul>
+                    </div>
+                  </section>
             </div>
+            
             <div class="grid-item" id="grid-element-three">three
+                <div class="img-container">
+                    <img id="img-one">
+                    <img id="img-two">
+                    <img id="img-three">
+                </div>
             </div>
-            <div class="grid-item" id="grid-element-four">four
+            <!-- <div class="grid-item" id="grid-element-four">four
+                <section class="img-container">
+                    <img id="img-two">
+                </section>
             </div>
             <div class="grid-item" id="grid-element-five">five
+                <section class="img-container">
+                    <img id="img-three">
+                </section>
+            </div> -->
+            
+            <div class="grid-item" id="grid-element-six">Every day is taco ipsum tuesday. Give me tacos, or give me death. Give me all your tacos. Shrimp tacos are tasty tacos! Make it a double there pal. It’s a wonderful morning for breakfast tacos. It’s long been rumored that the chupacabra is really just a crazed man who’s local taco shop went out of business. Black or pinto beans? Say taco one more time. Give me all the tacos, immediately. These tacos are lit 🔥. Ooh, with diced onions and a pinch of cilantro. How bout a gosh darn quesadilla? CARNE ASADA!!
             </div>
-            <div class="grid-item" id="grid-element-six">six
-            </div>
-            <div class="grid-item" id="grid-element-seven">seven
+            <div class="grid-item" id="grid-element-seven">This is a footer because the wireframe wanted a footer.
             </div>
 
 
@@ -40,8 +61,6 @@
 
     </main>
 
-    <footer>
-
-    </footer>
+    <script src="js/app.js"></script>
 </body>
 </html>
