added chart in canvas

--- a/index.html
+++ b/index.html
@@ -50,9 +50,13 @@
                 </section>
             </div> -->
             
-            <div class="grid-item" id="grid-element-six">Every day is taco ipsum tuesday. Give me tacos, or give me death. Give me all your tacos. Shrimp tacos are tasty tacos! Make it a double there pal. It’s a wonderful morning for breakfast tacos. It’s long been rumored that the chupacabra is really just a crazed man who’s local taco shop went out of business. Black or pinto beans? Say taco one more time. Give me all the tacos, immediately. These tacos are lit 🔥. Ooh, with diced onions and a pinch of cilantro. How bout a gosh darn quesadilla? CARNE ASADA!!
+            <div class="grid-item" id="grid-element-six">
+                <section class="chart-container">
+                    <button id="chart-button">View a chart of results</button>
+                    <canvas id="results-chart"></canvas>
+                </section>
             </div>
-            <div class="grid-item" id="grid-element-seven">This is a footer because the wireframe wanted a footer.
+            <div class="grid-item" id="grid-element-seven">Every day is taco ipsum tuesday. Give me tacos, or give me death. Give me all your tacos. Shrimp tacos are tasty tacos! Make it a double there pal. It’s a wonderful morning for breakfast tacos. It’s long been rumored that the chupacabra is really just a crazed man who’s local taco shop went out of business. Black or pinto beans? Say taco one more time. Give me all the tacos, immediately. These tacos are lit 🔥. Ooh, with diced onions and a pinch of cilantro. How bout a gosh darn quesadilla? CARNE ASADA!!
             </div>
 
 
@@ -60,7 +64,7 @@
         </section>
 
     </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
