--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   </section>
             </div>
             
-            <div class="grid-item" id="grid-element-three">three
+            <div class="grid-item" id="grid-element-three">Click on Your Favorite!
                 <div class="img-container">
                     <img id="img-one">
                     <img id="img-two">
