CSS touch up w sparkles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Roboto&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
@@ -20,7 +20,6 @@
     <main>
         <section class="grid-container">
             <div class="grid-item" id="grid-element-one">Odd Duck Products Survey: <br>
-             <p style= font-size:10;  >Please pick which product you would like to see us produce!</p>
             </div>
 
             <div class="grid-item" id="grid-element-two">
@@ -32,7 +31,7 @@
                   </section>
             </div>
             
-            <div class="grid-item" id="grid-element-three">Click on Your Favorite!
+            <div class="grid-item" id="grid-element-three">Please pick which product you would like to see us produce!
                 <div class="img-container">
                     <img id="img-one">
                     <img id="img-two">
